// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic arguments > should render help message for empty args 1`] = `""`;

exports[`cli options for bundling > cli default options 1`] = `
"input cli default options {
  input: 'index.js',
  plugins: [
    {
      name: 'test-input-plugin',
      options: [Function: options],
      outputOptions: [Function: outputOptions]
    }
  ]
}
output cli default options {}"
`;

exports[`cli options for bundling > should handle \`--input\` and positional args as entries 1`] = `
"//#region 1.ts
console.log("1");

//#endregion
//#region 2.js
console.log("2");

//#endregion"
`;

exports[`cli options for bundling > should handle multiple define arguments with comma-separated syntax 1`] = `""`;

exports[`cli options for bundling > should handle negative boolean options 1`] = `
"(function(exports, node_fs) {


//#region index.ts
	const nonExternal = "nonExternal";

//#endregion
exports.nonExternal = nonExternal;
exports.read = node_fs.read;
exports.readFile = node_fs.readFile;
exports.readFileSync = node_fs.readFileSync;
exports.readSync = node_fs.readSync;
return exports;
})({}, node_fs);"
`;

exports[`cli options for bundling > should handle nested options 1`] = `
"//#region index.js
var cli_option_nested_default = defined;

//#endregion
export { cli_option_nested_default as default };"
`;

exports[`cli options for bundling > should handle pass \`-s\` options 1`] = `""`;

exports[`cli options for bundling > should handle single array options 1`] = `""`;

exports[`cli options for bundling > should handle single boolean option 1`] = `""`;

exports[`cli options for bundling > should handle single boolean short options 1`] = `""`;

exports[`cli options for bundling > should handle single object options 1`] = `""`;

exports[`cli options for bundling > should handle single string options 1`] = `""`;

exports[`cli options for bundling > validate cli options 1`] = `
"Command failed with exit code 1: rolldown index.ts --format INCORRECT

[error] Invalid value for option format: Invalid type: Expected ("es" | "cjs" | "esm" | "module" | "commonjs" | "iife" | "umd") but received "INCORRECT". You can use \`rolldown -h\` to see the help."
`;

exports[`config > should allow loading cts config 1`] = `""`;

exports[`config > should allow loading mts config 1`] = `""`;

exports[`config > should allow loading ts config 1`] = `""`;

exports[`config > should allow loading ts config from non-working dir 1`] = `""`;

exports[`config > should allow loading ts config with oxnode 1`] = `""`;

exports[`config > should allow loading ts config with tsx 1`] = `""`;

exports[`config > should allow multiply options 1`] = `""`;

exports[`config > should allow multiply output + call options hook once  + call outputOptions hook 1`] = `
"called options hook
called output options hook
called output options hook"
`;

exports[`config > should allow multiply output 1`] = `""`;

exports[`config > should bundle in ext-js-syntax-cjs 1`] = `""`;

exports[`config > should resolve rolldown.config.cjs 1`] = `""`;

exports[`config > should support custom cli arguments 1`] = `""`;

exports[`config > should support environment option 1`] = `""`;

exports[`watch cli > should allow multiply output + call options hook once + call outputOptions hook 1`] = `
"called options hook
called output options hook
called output options hook"
`;

exports[`watch cli > should require both ROLLDOWN_WATCH and this.meta.watchMode to be false 1`] = `
"process.env.ROLLUP_WATCH undefined
process.env.ROLLDOWN_WATCH undefined
options called:
this.meta.watchMode false
process.env.ROLLUP_WATCH undefined
process.env.ROLLDOWN_WATCH undefined
onLog called:
this.meta.watchMode false
(test plugin) trigger onLog
buildStart called:
this.meta.watchMode false
closeBundle called:"
`;

exports[`watch cli > should require both ROLLDOWN_WATCH and this.meta.watchMode to be true 1`] = `
"process.env.ROLLUP_WATCH true
process.env.ROLLDOWN_WATCH true
options called:
this.meta.watchMode true
process.env.ROLLUP_WATCH true
process.env.ROLLDOWN_WATCH true
onLog called:
this.meta.watchMode true
(test plugin) trigger onLog
buildStart called:
this.meta.watchMode true
closeBundle called:"
`;
